--- a/configs.json
+++ b/configs.json
@@ -1,6 +1,6 @@
 {
     "mnist": {
-        "path": "PATH_FOR_MULTIMNIST_DATASET",
+        "path": "data/mnist",
         "all_tasks": ["L", "R"]
     },
 
@@ -12,7 +12,7 @@
     },
 
     "celeba": {
-        "path": "PATH_FOR_CELEBA_DATASET",
+        "path": "data/celeba",
         "all_tasks": ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20",
                       "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39"],
         "img_rows": 64,
