--- a/configs/compass.yaml
+++ b/configs/compass.yaml
@@ -7,8 +7,8 @@ eval_every: 1
 
 # results of hpo
 cosmos:
-  lamda: 2.
-  alpha: .2
+  lamda: .5
+  alpha: [.2]
 
 mgda:
   normalization_type: 'loss'
