fix bug in cityscapes

--- a/configs/cityscapes.yaml
+++ b/configs/cityscapes.yaml
@@ -2,6 +2,7 @@
 dataset: cityscapes
 dim: [3, 256, 512]
 task_ids: [segm, inst, depth]
+ignore_index: 255
 objectives: [CrossEntropyLoss, L1Loss, L1Loss]
 metrics: [mIoU, L1Loss, L1Loss]
 n_partitions: 5
