--- a/configs/multi_mnist.yaml
+++ b/configs/multi_mnist.yaml
@@ -8,9 +8,10 @@ eval_every: 2
 
 # results of hpo
 cosmos:
-  lamda: 3.
+  lamda: .2
   alpha: [1.]
   lr_scheduler: MultiStep
+  lr: 1e-3
 
 mgda:
   normalization_type: 'loss'
