--- a/configs/cityscapes.yaml
+++ b/configs/cityscapes.yaml
@@ -10,11 +10,14 @@ n_partitions: 5
 batch_size: 8
 epochs: 200
 
+eval_every: 25
+
 cosmos:
   lr_scheduler: MultiStep
   alpha: [1.3]
   lamda: .5
   lr: 0.0005
+  normalize: False
 
 mgda:
   normalization_type: l2
