cosmos with lagrange multipliers

--- a/configs/multi_mnist.yaml
+++ b/configs/multi_mnist.yaml
@@ -4,14 +4,15 @@ dim: [1, 36, 36]
 task_ids: [l, r]    # top left, bottom right
 objectives: [CrossEntropyLoss, CrossEntropyLoss]
 epochs: 100
-eval_every: 2
+eval_every: 10
 
 # results of hpo
 cosmos:
-  lamda: .2
-  alpha: [1.]
+  lamda: 3.
+  alpha: [1., 1.]
   lr_scheduler: MultiStep
-  lr: 1e-3
+  lr: 1e-2
+  normalize: false
 
 mgda:
   normalization_type: 'loss'
