--- a/configs/adult.yaml
+++ b/configs/adult.yaml
@@ -9,9 +9,11 @@ eval_every: 1
 
 # results of hpo
 cosmos:
-  lamda: .2
-  alpha: [1, .2]
+  lamda: 0.
+  alpha: [1., 1.]    # concentration parameter behaves differently
   normalize: True
+  lr: 0.0001
+  instances: False
 
 mgda:
   normalization_type: 'loss'
