--- a/configs/adult.yaml
+++ b/configs/adult.yaml
@@ -7,13 +7,13 @@ objectives: [
 epochs: 50
 eval_every: 1
 
-# results of hpo
+# results of hpo, dont change!
 cosmos:
-  lamda: 0.
-  alpha: [1., 1.]    # concentration parameter behaves differently
+  lamda: 0.           # we don't need lamda here as objectives are mutually exclusive
+  alpha: [1.0888, 0.3093]
   normalize: True
-  lr: 0.0001
-  instances: False
+  lr: 0.00035
+  instances: False    # true results in V-shaped pareto fronts
 
 mgda:
   normalization_type: 'loss'
