--- a/configs/compass.yaml
+++ b/configs/compass.yaml
@@ -8,9 +8,9 @@ eval_every: 1
 # results of hpo
 cosmos:
   lamda: 0.
-  alpha: [1., 1.]
-  normalize: True
-  instances: False
+  alpha: [0.5257, 0.3169]
+  normalize: False
+  lr: 0.00584
 
 mgda:
   normalization_type: 'loss'
