--- a/configs/adult.yaml
+++ b/configs/adult.yaml
@@ -15,6 +15,10 @@ cosmos:
   lr: 0.00035
   instances: False    # true results in V-shaped pareto fronts
 
+
+cosmos2:
+  lr: 0.005
+
 mgda:
   normalization_type: 'loss'
 
