--- a/configs/multi_fashion.yaml
+++ b/configs/multi_fashion.yaml
@@ -2,3 +2,10 @@ _BASE_: multi_mnist.yaml
 
 dataset: multi_fashion
 
+cosmos:
+  lamda: 3.4526
+  alpha: [0.9691, 1.3758]
+  lr_scheduler: CosineAnnealing
+  lr: 0.00131
+  normalize: false
+  instances: false
