fix preference rays for min and max

--- a/configs/multi_mnist.yaml
+++ b/configs/multi_mnist.yaml
@@ -8,6 +8,10 @@ eval_every: 10
 
 # results of hpo
 cosmos:
+  loss_mins: [0.15, 0.2]
+  dampening: 0.
+  clipping: .3
+
   lr_scheduler: CosineAnnealing
   lr: 1e-3
 
