--- a/configs/adult.yaml
+++ b/configs/adult.yaml
@@ -5,15 +5,16 @@ objectives: [
   BinaryCrossEntropyLoss,
   ddp]
 epochs: 50
-eval_every: 1
+eval_every: 2
 
 # results of hpo, dont change!
 cosmos:
-  lr: 0.00035
+  lr: 0.0001
+  loss_mins: [0.25, 0.0]
+  loss_maxs: [1, .1]
+  clipping: 10.
 
 
-cosmos2:
-  lr: 0.005
 
 mgda:
   normalization_type: 'loss'
