--- a/configs/celeba.yaml
+++ b/configs/celeba.yaml
@@ -23,15 +23,14 @@ objectives: [
 reference_point: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
 n_partitions: 3
 epochs: 100
-batch_size: 32
-eval_every: 0   # do it outside of training
-checkpoint_every: 5
+batch_size: 256
+eval_every: 1
+checkpointing: True
 
 cosmos:
   lr_scheduler: MultiStep
-  lr: 0.0001
-  lamda: 1.
-  alpha: [.5]
+  lr: 0.001
+  n_train_rays: 2
 
 mgda:
   lr_scheduler: MultiStep
