--- a/configs/multi_fashion/cosmos.yaml
+++ b/configs/multi_fashion/cosmos.yaml
@@ -3,8 +3,9 @@ _BASE_: _base.yaml
 method: cosmos
 
 train_ray_mildening: 0.3
-dampening: 0.
-lambda_clipping: 5.
+dampening: 0.01
+lambda_clipping: 10.
+
 lr_scheduler: CosineAnnealing
-lr: 5e-4
-weight_decay: 1e-2
+lr: 0.001
+weight_decay: 0.01
