--- a/configs/multi_fashion_mnist/phn.yaml
+++ b/configs/multi_fashion_mnist/phn.yaml
@@ -2,10 +2,10 @@ _BASE_: _base.yaml
 
 method: phn
 
-alpha: .2
+alpha: 1.0
 internal_solver_phn: linear
 
 lr_scheduler: CosineAnnealing
-lr: 1e-3
-weight_decay: 0.
+lr: 0.0005
+weight_decay: 0.1
 
