--- a/configs/multi_fashion_mnist/single_task.yaml
+++ b/configs/multi_fashion_mnist/single_task.yaml
@@ -3,5 +3,5 @@ _BASE_: _base.yaml
 method: single_task
 
 lr_scheduler: CosineAnnealing
-lr: 1e-3
-weight_decay: 1e-2
+lr: 0.0005
+weight_decay: 0.01
