--- a/configs/multi_mnist/mgda.yaml
+++ b/configs/multi_mnist/mgda.yaml
@@ -2,8 +2,8 @@ _BASE_: _base.yaml
 
 method: mgda
 
-normalization_type: loss
+normalization_type: loss+
 
 lr_scheduler: CosineAnnealing
-lr: 1e-3
-weight_decay: 1e-2
+lr: 0.0005
+weight_decay: 0.01
