--- a/configs/movielens/mgda.yaml
+++ b/configs/movielens/mgda.yaml
@@ -2,8 +2,8 @@ _BASE_: _base.yaml
 
 method: mgda
 
-normalization_type: loss+
+normalization_type: init_loss
 
 lr_scheduler: none
 lr: 0.001
-weight_decay: 0.001
+weight_decay: 0.0
