--- a/configs/celeba/_base.yaml
+++ b/configs/celeba/_base.yaml
@@ -1,31 +1,20 @@
 
 dataset: celeba
 dim: [3, 64, 64]
-task_ids: [
-    0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 
-    10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 
-    20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 
-    30, 31, 32, 33, 34, 35, 36, 37, 38, 39,
-]
-objectives: [
-    BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, 
-    BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, 
-    BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, 
-    BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, 
-    BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, 
-    BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, 
-    BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, 
-    BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, 
-    BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, 
-    BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, BinaryCrossEntropyLoss, BinaryCrossEntropyLoss,
-]
 
-reference_point: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
-n_partitions: 2
-epochs: 100
+accuracy_class: 2       # attractive
+sensible_attribute: 20  # male
+
+objectives: [BinaryCrossEntropyLoss, ddp]
+
+reference_point: [1, 1]
+
+n_partitions: 25
+
+epochs: 10
 batch_size: 32
 eval_every: 5
-checkpointing: True
+checkpointing: False
 
 
 
