settings for celeba

--- a/configs/adult/_base.yaml
+++ b/configs/adult/_base.yaml
@@ -4,6 +4,10 @@ dim: [88]
 objectives: [
   BinaryCrossEntropyLoss,
   ddp]
+
+# accuracy_class: 2       # attractive
+sensible_attribute: "gender"
+
 epochs: 50
 eval_every: 2
 
