--- a/configs/movielens/single_task.yaml
+++ b/configs/movielens/single_task.yaml
@@ -2,6 +2,6 @@ _BASE_: _base.yaml
 
 method: single_task
 
-lr_scheduler: none
+lr_scheduler: CosineAnnealing
 lr: 0.001
-weight_decay: 0.01
+weight_decay: 0.005
