--- a/configs/movielens/cosmos.yaml
+++ b/configs/movielens/cosmos.yaml
@@ -5,18 +5,19 @@ method: cosmos
 train_eval_every: 0
 eval_every: 0
 
-loss_mins: [250.0, 180.0]
-loss_maxs: [350.0, 250.0]
+loss_mins: [270.0, 190.0]
+loss_maxs: [300.0, 220.0]
 
 epochs: 100
+batch_size: 256
 
-train_ray_mildening: 0.3
+train_ray_mildening: 0.5
 dampening: 0.0
-lambda_clipping: 10.
-lambda_lr: .2
+lambda_clipping: 1500.
+lambda_lr: 20.
 
 lr_scheduler: CosineAnnealing
-lr: 0.0005
+lr: 0.001
 weight_decay: 0.0
 
 vae_params:
