--- a/configs/multi_fashion_mnist/single_task_2.yaml
+++ b/configs/multi_fashion_mnist/single_task_2.yaml
@@ -2,6 +2,8 @@ _BASE_: _base.yaml
 
 method: single_task
 
+task_id: r
+
 lr_scheduler: CosineAnnealing
-lr: 0.0005
-weight_decay: 0.01
+lr: 1e-3
+weight_decay: 1e-2
