--- a/configs/multi_mnist/single_task_1.yaml
+++ b/configs/multi_mnist/single_task_1.yaml
@@ -4,6 +4,6 @@ method: single_task
 
 task_id: l
 
-lr_scheduler: CosineAnnealing
-lr: 1e-3
-weight_decay: 1e-2
+lr_scheduler: MultiStep
+lr: 0.00025
+weight_decay: 0.01
