--- a/configs/multi_mnist/single_task_2.yaml
+++ b/configs/multi_mnist/single_task_2.yaml
@@ -4,6 +4,6 @@ method: single_task
 
 task_id: r
 
-lr_scheduler: CosineAnnealing
-lr: 0.00025
-weight_decay: 0.05
+lr_scheduler: MultiStep
+lr: 0.001
+weight_decay: 0.0075
