--- a/configs/multi_fashion_mnist/mgda.yaml
+++ b/configs/multi_fashion_mnist/mgda.yaml
@@ -2,8 +2,8 @@ _BASE_: _base.yaml
 
 method: mgda
 
-normalization_type: none
+normalization_type: l2
 
-lr_scheduler: CosineAnnealing
-lr: 0.001
+lr_scheduler: MultiStep
+lr: 0.00075
 weight_decay: 0.01
