--- a/configs/multi_fashion_mnist/single_task_2.yaml
+++ b/configs/multi_fashion_mnist/single_task_2.yaml
@@ -4,6 +4,6 @@ method: single_task
 
 task_id: r
 
-lr_scheduler: CosineAnnealing
-lr: 1e-3
-weight_decay: 1e-2
+lr_scheduler: MultiStep
+lr: 0.001
+weight_decay: 0.0075
