--- a/configs/multi_mnist/cosmos.yaml
+++ b/configs/multi_mnist/cosmos.yaml
@@ -2,9 +2,9 @@ _BASE_: _base.yaml
 
 method: cosmos
 
-train_ray_mildening: 0.3
-dampening: 0.
-lambda_clipping: 5.
+alpha: 1.2
+lamda: 2.
+
 lr_scheduler: CosineAnnealing
-lr: 5e-4
-weight_decay: 1e-2
+lr: 1e-3
+weight_decay: 0.
