different configs for original phn and cosmos

--- a/configs/multi_fashion/cosmos_orig.yaml
+++ b/configs/multi_fashion/cosmos_orig.yaml
@@ -1,9 +1,9 @@
 _BASE_: _base.yaml
 
-method: cosmos
+method: cosmos_orig
 
 alpha: 1.2
-lamda: 8.
+lamda: 2.
 
 lr_scheduler: CosineAnnealing
 lr: 0.001
