--- a/configs/multi_fashion_mnist/phn_orig.yaml
+++ b/configs/multi_fashion_mnist/phn_orig.yaml
@@ -1,11 +1,11 @@
 _BASE_: _base.yaml
 
-method: phn
+method: phn_orig
 
 alpha: 0.2
 internal_solver_phn: linear
 
 lr_scheduler: CosineAnnealing
-lr: 0.001
+lr: 0.00075
 weight_decay: 0.05
 
