--- a/configs/multi_fashion/cosmos.yaml
+++ b/configs/multi_fashion/cosmos.yaml
@@ -2,9 +2,8 @@ _BASE_: _base.yaml
 
 method: cosmos
 
-train_ray_mildening: 0.3
-dampening: 0.01
-lambda_clipping: 10.
+alpha: 1.2
+lamda: 2.
 
 lr_scheduler: CosineAnnealing
 lr: 0.001
