--- a/configs/multi_fashion/single_task_2.yaml
+++ b/configs/multi_fashion/single_task_2.yaml
@@ -4,6 +4,6 @@ method: single_task
 
 task_id: r
 
-lr_scheduler: MultiStep
-lr: 0.00075
+lr_scheduler: CosineAnnealing
+lr: 0.001
 weight_decay: 0.01
