--- a/configs/multi_fashion_mnist/uniform.yaml
+++ b/configs/multi_fashion_mnist/uniform.yaml
@@ -2,6 +2,6 @@ _BASE_: _base.yaml
 
 method: uniform
 
-lr_scheduler: MultiStep
-lr: 0.001
-weight_decay: 0.005
+lr_scheduler: CosineAnnealing
+lr: 0.00075
+weight_decay: 0.01
