--- a/configs/multi_fashion/mgda.yaml
+++ b/configs/multi_fashion/mgda.yaml
@@ -2,8 +2,8 @@ _BASE_: _base.yaml
 
 method: mgda
 
-normalization_type: loss
+normalization_type: loss+
 
 lr_scheduler: CosineAnnealing
-lr: 0.001
-weight_decay: 0.0075
+lr: 0.0025
+weight_decay: 0.005
