--- a/size_50_configs/multi_fashion_mnist/single_task_1.yaml
+++ b/size_50_configs/multi_fashion_mnist/single_task_1.yaml
@@ -4,6 +4,6 @@ method: single_task
 
 task_id: l
 
-lr_scheduler: MultiStep
-lr: 0.001
-weight_decay: 0.0075
+lr_scheduler: CosineAnnealing
+lr: 0.00075
+weight_decay: 0.01
