--- a/size_50_configs/multi_fashion_mnist/uniform.yaml
+++ b/size_50_configs/multi_fashion_mnist/uniform.yaml
@@ -2,6 +2,6 @@ _BASE_: _base.yaml
 
 method: uniform
 
-lr_scheduler: MultiStep
-lr: 0.001
+lr_scheduler: CosineAnnealing
+lr: 0.0005
 weight_decay: 0.005
