--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 torch==1.7.1
-numpy==1.20.1
-scipy==1.6.0
-matplotlib==3.4.2
-pymoo==0.4.2.2
-scikit-learn==0.24.1
-fvcore==0.1.5.post20210630
-cvxopt==1.2.5
-cvxpy==1.1.10
+numpy>=1.20.1
+scipy>=1.6.0
+matplotlib>=3.4.2
+pymoo>=0.4.2.2
+scikit-learn>=0.24.1
+cvxopt>=1.2.5
+cvxpy>=1.1.10
 termcolor
+fvcore
